# qt-heic-image-plugin

./: CMakeLists.txt  README.md  appveyor.yml  qt-heic-image-plugin.pro  qt-heic-image-plugin6.pro
qtbuild_5.15.2/: qt-heic-image-plugin_win64.pro
qtbuild_6.5.3/: qt-heic-image-plugin_win64.pro
qtbuild_6.7.1/: qt-heic-image-plugin_win64.pro
qtbuild_6.7.2/: qt-heic-image-plugin_win64.pro
qtbuild_6.8.0/: qt-heic-image-plugin_win64.pro
qtbuild_6.8.1/: qt-heic-image-plugin_win64.pro
qtbuild_6.8.3/: qt-heic-image-plugin_win64.pro
qtbuild_6.9.2/: qt-heic-image-plugin_win64.pro
qtbuild_6.9.3/: qt-heic-image-plugin_win64.pro
src/: CMakeLists.txt  heif.cpp  heif.json  heif_p.h
